
	* src/gui/widgets/layout.h, src/gui/widgets/layout.cpp,
	src/Makefile.am: Added a layout handler for automatically positioning
	widgets in a window.
	* src/gui/window.h, src/gui/window.cpp: Removed garbage-collected
	container. Fixed dangling resize widget. Added layout handler.
	* src/gui/login.cpp: Fixed layout of login dialog box when native
	language is not English.

2007-10-19  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* data/equipment.xml: Removed obsolete file.
	* data/items.xml: Fixed equipment types.
	* src/item.h: Fixed invalid item ID.
	* src/gui/inventorywindow.cpp, src/gui/itemcontainer.cpp: Fixed key
	special values.
	* src/gui/itemcontainer.cpp: Reduced amount of spurious item
	deselections.
	* src/gui/itemcontainer.cpp, src/gui/itemcontainer.h: Allowed dragging
	of already selected items.
	* src/gui/buy.cpp, src/gui/sell.cpp, po/POTFILES.in: Marked buy and
	sell dialog boxes as translatable.
	* src/resources/resource.cpp, src/resources/resource.h,
	src/resources/imageset.cpp, src/resources/imageset.h: Removed mandatory
	identifier path.
	* src/resources/resourcemanager.cpp, src/resources/resourcemanager.h:
	Factored code between resource handlers.
	* src/resources/soundeffect.h, src/resources/soundeffect.cpp,
	src/resources/music.h, src/resources/music.cpp, src/resources/image.h,
	src/resources/image.cpp: Reworked resource loaders.
	* src/resources/spritedef.h, src/resources/spritedef.cpp: Implemented
	a failure-friendly loader.
	* src/gui/truetypefont.cpp, src/resources/imageloader.cpp,
	src/tileset.h: Removed dummy parameter.

2007-10-19  Philipp Sehmisch <tmw@crushnet.org>

	* src/gui/truetypefont.cpp: Increased text chunk cache size to improve
	performance when a lot of text is on the screen.

2007-10-18  Guillaume Melquiond  <guillaume.melquiond@gmail.com>

	* src/beingmanager.h, src/beingmanager.cpp, src/net/beinghandler.cpp:
	Removed guess of being type from class number. Factored handler for new
	beings.